fixed dictionary creation, started adding debug, more html tags